fix: resolve merge compilation errors
- Remove extra closing brace in MutableGuide.close()
- Remove unused GuideDevWatcherPump import in ClientProxy
- Replace Collections.emptyMap() with Map.of() in SceneEditorMarkdownCodec